Open API documentation and postman collection updated. Bugs fixed in tests. Added limit, order_by and ascending parameters in searchGameByName.
